# pyfedcamp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
src/pyfedcamp/: __init__.py  cli.py  placards.py  reservations.py
tests/: test_placards.py  test_reservations.py
tests/data/: Camping_Reservation_Detail_2025-07-08_to_2025-07-08.xlsx
