[tool.poetry]
name = "pyfedcamp"
version = "0.1.0"
description = "Python client with tools for working with recreation.gov data."
authors = ["Sky Bristol <skybristol@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pyfedcamp", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.setuptools.package-data]
"pyfedcamp" = ["static/*.png"]

[tool.poetry.scripts]
pyfedcamp = "pyfedcamp.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.0"
reportlab = "^4.4.1"
openpyxl = "^3.1.5"
python-dateutil = "^2.9.0.post0"
importlib-resources = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
